--- a/index.html
+++ b/index.html
@@ -20,11 +20,15 @@
     </div>
     <!--Container for Players Cards-->
     <div class="playerCards">
-
+ <img src="./cards/Ace.png">
+ <img src="./cards/five.png">
+ <img src="./cards/Ace.png">
+ <img src="./cards/five.png">
     </div>
     <!--Container for Dealers Cards-->
     <div class="dealerCards">
-
+        <img src="./cards/Ace.png">
+        <img src="./cards/five.png">
     </div>
     <!--Container for Points-->
     <div class="pointsContainer">
