--- a/index.html
+++ b/index.html
@@ -17,18 +17,15 @@
     <!--New Game Button-->
     <div id="newHandBtn">
         <button id="newHand">New Hand</button>
+        <button id="newDeal"> Deal</button>
     </div>
     <!--Container for Players Cards-->
     <div class="playerCards">
- <img src="./cards/Ace.png">
- <img src="./cards/five.png">
- <img src="./cards/Ace.png">
- <img src="./cards/five.png">
+
     </div>
     <!--Container for Dealers Cards-->
     <div class="dealerCards">
-        <img src="./cards/Ace.png">
-        <img src="./cards/five.png">
+     
     </div>
     <!--Container for Points-->
     <div class="pointsContainer">
